--- a/index.html
+++ b/index.html
@@ -1,69 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Yongintail</title>
-  <style>
-    /* 전체 검정 배경 + 기본 텍스트 스타일 */
-    :root{--bg:#000;--fg:#fff}
-    html,body{height:100%;margin:0}
-    body{
-      background:var(--bg);
-      color:var(--fg);
-      font-family:Inter, system-ui, -apple-system, "Helvetica Neue", Arial;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      flex-direction:column;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yongintail</title>
 
-    /* 페이지 컨테이너 (중앙 정렬 테스트용) */
-    .container{
-      width:min(1100px,92%);
-      text-align:center;
-      padding:48px 24px;
-    }
-
-    h1{font-size:clamp(28px,4vw,56px);margin:0 0 8px}
-    p{margin:0 0 20px;opacity:0.8}
-
-    /* 예시 네비게이션 (나중에 수정) */
-    nav{position:fixed;left:16px;top:16px}
-    nav a{color:var(--fg);text-decoration:none;font-weight:600;margin-right:12px}
-
-    /* 전체화면 섹션 예시 */
-    .hero{
-      width:100%;height:60vh;display:flex;align-items:center;justify-content:center;
-      border:1px solid rgba(255,255,255,0.03);box-sizing:border-box;border-radius:12px;
-    }
-
-    /* 푸터 */
-    footer{position:fixed;right:16px;bottom:12px;font-size:12px;opacity:0.6}
-  </style>
+    <!-- style.css 연결 -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#lore">Lore</a>
-    <a href="#devlog">Devlog</a>
-  </nav>
 
-  <main class="container">
-    <h1>Welcome to Yongintail</h1>
-    <p>사이트 전체 배경을 검정(#000)으로 설정한 기본 템플릿입니다.</p>
+    <div class="container">
+        <h1>Yongintail</h1>
+        <p>용인 + Undertale 팬 사이트</p>
+        <p>Welcome to Yongintail Universe!</p>
+    </div>
 
-    <section class="hero">
-      <div>
-        <strong>이곳에 메인 비주얼 / 로고를 추가하세요.</strong>
-        <div style="height:16px"></div>
-        <small>텍스트는 흰색으로 기본 설정되어 있습니다.</small>
-      </div>
-    </section>
-  </main>
-
-  <footer>Yongintail · 2025</footer>
 </body>
 </html>
